fix: revert pl-64 shifts, widen container to 1440px with symmetric padding

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,11 +20,11 @@
 @layer utilities {
   .container-app {
     width: 100%;
-    max-width: 1280px;
+    max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 4rem;
-    padding-right: 4rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
 
   .custom-scrollbar::-webkit-scrollbar {
